package lab3;

public interface FlyStrategy {
    public void fly();
}
