package lab3;

public interface QuackStrategy {
    public void quack();
}
